typo in Procfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,212 @@
-Flask~=1.1.2
-pycoingecko~=1.4.0
-pickleDB~=0.9.2
-Currency~=0.1.2
-gunicorn
+aiohttp==3.6.2
+aiohttp-socks==0.4.2
+aiorpcX==0.18.4
+apipkg==1.5
+apparmor==3.0.0
+appdirs==1.4.4
+apsw==3.33.0.post1
+arandr==0.1.10
+argon2-cffi==20.1.0
+arrow==0.17.0
+asn1crypto==1.4.0
+async-timeout==3.0.1
+atomicwrites==1.4.0
+attrs==20.3.0
+Automat==20.2.0
+backcall==0.2.0
+backports-abc==0.5
+Beaker==1.11.0
+beautifulsoup4==4.9.3
+bitstring==3.1.7
+bleach==3.2.1
+btrfsutil==5.9
+CacheControl==0.12.6
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+chromedriver-autoinstaller==0.2.2
+click==7.1.2
+colorama==0.4.4
+constantly==15.1.0
+contextlib2==0.6.0.post1
+cryptography==3.2.1
+css-parser==1.0.6
+cssselect==1.1.0
+cupshelpers==1.0
+cycler==0.10.0
+Cython==0.29.21
+decorator==4.4.2
+defusedxml==0.6.0
+deluge==2.0.4.dev38
+distlib==0.3.1
+distro==1.5.0
+dnspython==1.16.0
+docopt==0.6.2
+ecdsa==0.16.0
+Electrum==4.0.4
+entrypoints==0.3
+f.lux-indicator-applet==1.2.0
+feedparser==5.2.1
+Flask==1.1.2
+geographiclib==1.50
+GeoIP==1.3.2
+geopy==2.0.0
+greenlet==0.4.17
+gufw==20.4.0
+gunicorn==20.0.4
+h11==0.11.0
+html2text==2020.1.16
+html5-parser==0.4.9
+html5lib==1.1
+httpcore==0.12.0
+httpx==0.16.1
+hyperlink==20.0.1
+idna==2.10
+ifaddr==0.1.7
+ImageHash==4.1.0
+importlib-metadata==2.0.0
+incremental==17.5.0
+iniconfig==1.0.1
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.1.0
+ipywidgets==7.5.1
+isc==2.0
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+jsonrpclib-pelix==0.4.1
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+kiwisolver==1.3.1
+lensfun==0.3.95
+LibAppArmor==3.0.0
+lockfile==0.12.2
+loremipsum==1.0.5
+louis==3.15.0
+lxml==4.6.1
+Mako==1.1.3
+Markdown==3.3.3
+MarkupSafe==1.1.1
+matplotlib==3.3.3
+mechanize==0.4.5
+mistune==0.8.4
+more-itertools==8.6.0
+msgpack==1.0.0
+multidict==4.7.6
+nbconvert==5.6.1
+nbformat==5.0.6
+netifaces==0.10.9
+netsnmp-python==1.0a1
+nh-currency==1.0.1
+notebook==6.1.4
+npyscreen==4.10.5
+numpy==1.19.2
+ordered-set==4.0.2
+packaging==20.4
+pacman-mirrors==4.16.4
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.7.1
+patsy==0.5.1
+pbkdf2==1.3
+pep517==0.9.1
+pexpect==4.8.0
+pickleDB==0.9.2
+pickleshare==0.7.5
+Pillow==7.2.0
+Pillow-SIMD==7.0.0.post3
+pluggy==0.13.1
+ply==3.11
+praw==7.1.0
+prawcore==1.5.0
+progress==1.5
+prometheus-client==0.8.0
+prompt-toolkit==3.0.8
+protobuf==3.12.4
+psutil==5.7.3
+ptyprocess==0.6.0
+py==1.9.0
+py3status==3.31
+pyaes==1.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.0
+pychm==0.8.6
+pycoingecko==1.4.0
+pycparser==2.20
+pycryptodomex==3.9.8
+pycups==2.0.1
+pycurl==7.43.0.6
+pyfiglet==0.8.post1
+Pygments==2.7.2
+PyGObject==3.38.0
+PyHamcrest==1.9.0
+pynvim==0.4.2
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+PyQt5==5.15.2
+PyQt5-sip==12.8.1
+PyQtWebEngine==5.15.2
+pyrsistent==0.17.3
+pysmbc==1.0.23
+PySocks==1.7.1
+pytest==6.1.2
+python-dateutil==2.8.1
+python-libtorrent==1.2.10
+python-xapp==2.0.2
+python-xlib==0.28
+pytoml==0.1.21
+pytz==2020.4
+PyWavelets==1.1.1
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==19.0.1
+qrcode==6.1
+ranger-fm==1.9.3
+regex==2020.11.13
+rencode==1.0.6
+replit==2.0.0
+reportlab==3.5.55
+requests==2.24.0
+resolvelib==0.5.1
+retrying==1.3.3
+rfc3986==1.4.0
+scipy==1.5.2
+seaborn==0.11.0
+selenium==3.141.0
+selenium-wire==2.1.1
+Send2Trash==1.5.0
+service-identity==18.1.0
+setproctitle==1.1.10
+shreddit==6.1.0
+six==1.15.0
+sniffio==1.2.0
+soupsieve==2.0.1
+speedtest-cli==2.1.2
+statsmodels==0.12.1
+team==1.0
+termdown==1.17.0
+terminado==0.9.1
+testpath==0.4.4
+toml==0.10.2
+tornado==6.1
+traitlets==4.3.3
+Twisted==20.3.0
+typing-extensions==3.7.4.3
+ueberzug==18.1.6
+ufw==0.36
+unrardll==0.1.4
+update-checker==0.18.0
+urllib3==1.25.10
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.57.0
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+yarl==1.5.1
+zeroconf==0.28.6
+zipp==3.4.0
+zope.interface==5.2.0
